added sorting for listFiles().